# DocuAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  readme.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  test.db
backend/app/: config.py  main.py
backend/app/agent/: engine.py  memory.py  planner.py
backend/app/agent/tools/: code_executor.py  rag_tool.py  sql_tool.py  web_search.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  documents.py
backend/app/models/: database.py  schemas.py
backend/app/rag/: chunker.py  embedder.py  loader.py  reranker.py  retriever.py
backend/app/services/: llm_service.py  vector_store.py
backend/tests/: conftest.py
backend/tests/test_agent/: test_code_executor.py  test_engine.py  test_memory.py  test_rag_tool.py  test_sql_tool.py  test_web_search.py
backend/tests/test_api/: test_auth.py  test_chat.py  test_documents.py  test_health.py
backend/tests/test_rag/: test_chunker.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentTrace.tsx  ChatInterface.tsx  DocumentUpload.tsx  MessageBubble.tsx  Sidebar.tsx  SourcePanel.tsx  Toast.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
